# PythonCodeFiles

./: .gitignore  test.py  test2.py
.devcontainer/: devcontainer.json
PersonalExpenseTracker/: expenses.csv
PersonalExpenseTrackerSumission/: Screenshots.doc  Write-up.doc
PythonCodeFiles/: Personal_Expense_tracker.py
Voting_Decider/: .env_example  003-basic-graph-whom-to-vote.py  Read_Me  pyproject.toml
auto_bi_plus/: requirements.txt
auto_bi_plus/app/: streamlit_app.py
auto_bi_plus/src/modeling/: anomaly.py  cluster.py  forecast.py  regression.py
auto_bi_plus/src/narration/: insight_engine.py  llm_narrator.py
immigration_bot/: .gitignore  README.md  requirements.txt
immigration_bot/backend/: app.py  ingest_docs.py  rag_pipeline.py
immigration_bot/frontend/: app.py
job_finder_bot/: .env.example  README.md  main.py  requirements.txt  streamlit_app.py
job_finder_bot/data/: h1b_companies.txt
job_finder_bot/matcher/: job_matcher.py
job_finder_bot/output/: BI_jobs_matched.xlsx  excluded_jobs.xlsx  indeed_jobs.xlsx  indeed_jobs_matched.xlsx  matched_jobs.xlsx  streamlit_jobs_output.xlsx  ~$excluded_jobs.xlsx
job_finder_bot/parsers/: resume_parser.py
job_finder_bot/scrapers/: indeed_scraper.py  serpapi_scraper.py
job_finder_bot/utils/: less_smart_query_generator.py  query_generator.py
my_genai_sql_app/: .env  app.py  create_db.py  requirements.txt
my_genai_sql_app/schema/: sample_data.db
my_genai_sql_app/utils/: query_utils.py
